--- a/.github/workflows/music-box.yml
+++ b/.github/workflows/music-box.yml
@@ -1,7 +1,7 @@
 name: music-box
 on:
   schedule:
-    - cron: '? * * * *'  # minutely
+    - cron: '0 * * * *'  # hourly
   push:
     branches: master
 jobs:
